--- a/foresite-java/trunk/pom.xml
+++ b/foresite-java/trunk/pom.xml
@@ -91,6 +91,11 @@
            <version>4.4</version>
            <scope>test</scope>
        </dependency>
+	   <dependency>
+		   <groupId>commons-cli</groupId>
+		   <artifactId>commons-cli</artifactId>
+		   <version>1.0</version>
+	   </dependency>
    </dependencies>
 
 </project>
